--- a/sass/components/_startpage.scss
+++ b/sass/components/_startpage.scss
@@ -16,7 +16,7 @@
     rgba(17, 17, 17, 0) 0%,
     rgba(17, 17, 17, 0.4) 100%
   );
-  background-image: url(/img/start-page/chocolate-covered-cocoa-powder-mob.jpg);
+  background-image: url("/img/start-page/chocolate-covered-cocoa-powder-mob@2x.jpg");
   background-size: cover;
 
   border-radius: 30px;
@@ -56,7 +56,7 @@
 }
 @media (min-resolution: 2dppx) {
   .start-page__block {
-    background-image: url(/img/start-page/chocolate-covered-cocoa-powder-mob@2x.jpg);
+    background-image: url("/img/start-page/chocolate-covered-cocoa-powder-mob@2x.jpg");
   }
 }
 .howmade {
