--- a/css/main.css
+++ b/css/main.css
@@ -246,7 +246,7 @@ a {
   max-width: 335px;
   height: 620px;
   background: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%);
-  background-image: url("/img/start-page/chocolate-covered-cocoa-powder-mob@2x.jpg");
+  background-image: url("../../img/start-page/chocolate-covered-cocoa-powder-mob@2x.jpg");
   background-size: cover;
   border-radius: 30px;
 }
@@ -288,7 +288,7 @@ a {
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .start-page__block {
-    background-image: url("/img/start-page/chocolate-covered-cocoa-powder-mob@2x.jpg");
+    background-image: url("../../img/start-page/chocolate-covered-cocoa-powder-mob@2x.jpg");
   }
 }
 .howmade {
