change path to the file

--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,9 +1,9 @@
 .subscribe {
   padding: 62px 20px;
-  background-image: url(/img/subcribe/subcribe-mobile.jpg);
+  background-image: url(../img/subcribe/subcribe-mobile.jpg);
   background-size: cover;
   @media (min-resolution: 2dppx) {
-    background-image: url(/img/subcribe/subcribe-mobile@2x.jpg);
+    background-image: url(../img/subcribe/subcribe-mobile@2x.jpg);
   }
   .button {
     margin-top: 24px;
