--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,7 @@
 @import "components/chocloved";
 @import "components/subscribe";
 @import "components/footer";
+@import "components/menu-mobile";
+@import "components/modal-buynow";
+@import "components/modal-chocloved";
+@import "components/modal-subscribe";
