--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,7 @@ a {
 
 .header {
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
@@ -285,6 +286,10 @@ a {
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
 }
+.buynow:hover {
+  background: #fcf1e0;
+  color: #fd9222;
+}
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .start-page__block {
@@ -304,6 +309,10 @@ a {
   border-width: 1px;
   font-weight: 600;
   background: none;
+  color: #ffffff;
+}
+.howmade:hover {
+  background: #111111;
   color: #ffffff;
 }
 
@@ -371,8 +380,54 @@ a {
   color: #111111;
 }
 
-.tasteHover__discription {
+.taste__item-block {
+  position: relative;
+  padding: 28px 55px 71px 55px;
+  width: 335px;
+  height: 270px;
+  border-radius: 15px;
+  border: 1px solid #fd9222;
+}
+.taste__item-block--bkcolorprim {
+  background-color: #fd9222;
+}
+.taste__item-block--bkcolor {
+  background-color: #1e1823;
+}
+.taste__item-block:hover .tasteHover__block {
+  display: block;
+  transform: translateY(0%);
+}
+
+.tasteHover__block {
+  position: absolute;
   display: none;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  padding: 28px;
+  border-radius: 15px;
+  background-color: #ffffff;
+  transform: translateY(-100%);
+  transition: transform 450ms linear;
+}
+
+.tasteHover__title {
+  margin: 0;
+  margin-bottom: 10px;
+  color: #fd9222;
+  text-align: left;
+  font-size: 18px;
+  letter-spacing: -0.03em;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.tasteHover__discription {
+  margin: 0;
+  color: #111111;
+  text-align: left;
 }
 
 .taste__list {
@@ -384,18 +439,6 @@ a {
 
 .taste__item {
   display: block;
-  position: relative;
-  width: 335px;
-  height: 270px;
-  padding: 28px 55px 71px 55px;
-  border-radius: 15px;
-  border: 1px solid #fd9222;
-}
-.taste__item--bkcolorprim {
-  background-color: #fd9222;
-}
-.taste__item--bkcolor {
-  background-color: #1e1823;
 }
 
 .taste-img {
@@ -540,6 +583,7 @@ a {
 }
 
 .top-selers {
+  position: relative;
   padding: 72px 20px 0px 20px;
 }
 .top-selers .button {
@@ -553,8 +597,13 @@ a {
   background-color: #fd9222;
   border-radius: 100px;
   border: none;
+  cursor: pointer;
   color: #ffffff;
   font-weight: 600;
+}
+.top-selers .button:hover {
+  background: #fcf1e0;
+  color: #fd9222;
 }
 
 .top-selers__title {
@@ -622,6 +671,11 @@ a {
   color: #111111;
   text-align: center;
   font-weight: 600;
+  cursor: pointer;
+}
+.choc-loved .button:hover {
+  background-color: #fd9222;
+  color: #ffffff;
 }
 
 .choc-loved__title {
@@ -641,7 +695,7 @@ a {
   position: absolute;
   top: -40px;
   left: 50%;
-  z-index: 10;
+  z-index: 1;
   transform: translateX(-50%);
 }
 
@@ -684,6 +738,10 @@ a {
   font-weight: 600;
   border: none;
   cursor: pointer;
+}
+.subscribe .button:hover {
+  background: #fcf1e0;
+  color: #fd9222;
 }
 
 .subscribe__title {
@@ -766,4 +824,526 @@ a {
   row-gap: 18px;
   line-height: 1.14;
   font-weight: 500;
+}
+
+.menu-mobile {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 220px;
+  height: 100vh;
+  padding: 136px 46px 0 50px;
+  background-color: #111111;
+  transform: translateX(100%);
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 550ms linear, visibility 250ms linear, transform 350ms linear;
+}
+
+.menu-mobile.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+  transform: translateX(0%);
+}
+
+.menu-mobile__close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 28px;
+  height: 28px;
+  background: none;
+  border-radius: 50%;
+  border: none;
+}
+
+.menu-mobile__close-icon {
+  stroke: #ffffff;
+}
+
+.menu-mobile__close-btn:hover {
+  width: 40px;
+  height: 40px;
+  border-color: #fcf1e0;
+  background-color: #fcf1e0;
+}
+.menu-mobile__close-btn:hover .menu-mobile__close-icon {
+  width: 16px;
+  height: 16px;
+  stroke: #fd9222;
+}
+
+.menu-mobile__list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  gap: 24px;
+}
+
+.menu-mobile__link {
+  color: #ffffff;
+}
+.menu-mobile__link:hover {
+  color: #fd9222;
+}
+
+.menu-mobile__social-block {
+  display: flex;
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+}
+
+.menu-mobile__social-list {
+  display: flex;
+  gap: 18px;
+}
+
+.menu-mobile__social-icon {
+  stroke: #ffffff;
+}
+
+.menu-mobile__social-link:hover .menu-mobile__social-icon {
+  stroke: #fd9222;
+}
+
+.modal-buynow {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0px;
+  left: 50%;
+  width: 311px;
+  height: 994px;
+  padding: 32px 20px;
+  border-radius: 15px;
+  background-color: #fafafa;
+  transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateX(-50%);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-buynow_bt-close {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 14px;
+  right: 14px;
+  width: 24px;
+  height: 24px;
+  padding: 6px 6px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.modal-buynow_bt-close:hover {
+  background-color: #fcf1e0;
+}
+.modal-buynow_bt-close:hover .modal-buynow__icon-cl-menu {
+  stroke: #fd9222;
+}
+
+.modal-buynow__icon-cl-menu {
+  stroke: #111111;
+}
+
+.modal-buynow_title {
+  margin: 0;
+  margin-bottom: 32px;
+  text-align: center;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #111111;
+}
+
+.modal-buynow__list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  gap: 8px;
+}
+
+.modal-buynow__item-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+  padding: 8px 16px;
+  border-radius: 15px;
+  border-style: solid;
+  border-color: rgba(17, 17, 17, 0.1);
+  border-width: 1px;
+  background-color: #ffffff;
+}
+.modal-buynow__item-block button {
+  background: #fafafa;
+  border-radius: 100px;
+  border-style: solid;
+  border-color: rgba(17, 17, 17, 0.1);
+  border-width: 1px;
+  padding: 6px 16px 6px 16px;
+  color: #111111;
+  font-weight: 600;
+}
+
+.modal-buynow__form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 32px;
+}
+
+.form_phone {
+  display: flex;
+  margin-bottom: 18px;
+  max-width: 100%;
+  height: 44px;
+  border-radius: 8px;
+  border-style: solid;
+  border-color: rgba(17, 17, 17, 0.05);
+  border-width: 1.5px;
+  box-shadow: 0px 5.44px 5.44px 0px rgba(0, 0, 0, 0.03);
+  color: rgba(64, 64, 64, 0.3);
+  background-color: #ffffff;
+}
+.form_phone input {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  padding-left: 5px;
+  border: none;
+  box-shadow: none;
+}
+
+.phone-icone {
+  display: flex;
+  align-items: center;
+  width: 74px;
+  height: 24px;
+  margin-left: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 5px;
+  font-weight: 500;
+  color: #111111;
+}
+
+.phone-icone__discription {
+  margin: 0;
+  margin-left: 8px;
+}
+
+label {
+  margin-bottom: 8px;
+  color: #000000;
+  text-align: left;
+  font-size: 12px;
+  line-height: 1.16;
+  font-weight: 500;
+}
+
+input,
+textarea {
+  margin-bottom: 14px;
+  padding: 14px 18px;
+  border-radius: 8px;
+  border-style: solid;
+  border-color: rgba(17, 17, 17, 0.05);
+  border-width: 1.5px;
+  box-shadow: 0px 5.44px 5.44px 0px rgba(0, 0, 0, 0.03);
+  color: #111111;
+  text-align: left;
+}
+
+textarea {
+  height: 91px;
+  resize: none;
+}
+
+textarea::-moz-placeholder {
+  color: rgba(64, 64, 64, 0.3);
+}
+
+input,
+textarea::placeholder {
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.modal-buynow__button {
+  width: 109px;
+  height: 41px;
+  background: #fd9222;
+  border-radius: 100px;
+  border: none;
+  padding: 12px 28px 12px 28px;
+  display: flex;
+  position: relative;
+  color: #ffffff;
+  font-weight: 600;
+}
+.modal-buynow__button:hover {
+  background: #fcf1e0;
+  color: #fd9222;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(164, 183, 205, 0.8);
+  transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 999;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-chocloved {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 311px;
+  height: 471px;
+  padding: 32px 24px;
+  border-radius: 15px;
+  background-color: #fafafa;
+}
+
+.modal-chocloved_title {
+  width: 255px;
+  margin: 0;
+  margin-bottom: 32px;
+  text-align: left;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #111111;
+}
+
+.modal-chocloved__icon-cl-menu {
+  stroke: #111111;
+}
+
+.modal-chocloved__bt-close {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 14px;
+  right: 14px;
+  width: 24px;
+  height: 24px;
+  padding: 6px 6px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.modal-chocloved__bt-close:hover {
+  background-color: #fcf1e0;
+}
+.modal-chocloved__bt-close:hover .modal-chocloved__icon-cl-menu {
+  stroke: #fd9222;
+}
+
+.form_phone {
+  margin: 0;
+  margin-bottom: 14px;
+}
+
+input,
+textarea {
+  margin-bottom: 14px;
+  padding: 14px 18px;
+  width: 100%;
+  border-radius: 8px;
+  border-style: solid;
+  border-color: rgba(17, 17, 17, 0.05);
+  border-width: 1.5px;
+  box-shadow: 0px 5.44px 5.44px 0px rgba(0, 0, 0, 0.03);
+  color: #111111;
+  text-align: left;
+}
+
+textarea {
+  height: 91px;
+  resize: none;
+  margin-bottom: 18px;
+}
+
+textarea::-moz-placeholder {
+  color: rgba(64, 64, 64, 0.3);
+}
+
+input,
+textarea::placeholder {
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.modal-buynow__button {
+  width: 109px;
+  height: 41px;
+  background: #fd9222;
+  border-radius: 100px;
+  border: none;
+  padding: 12px 28px 12px 28px;
+  display: flex;
+  position: relative;
+  color: #ffffff;
+  font-weight: 600;
+}
+.modal-buynow__button:hover {
+  background: #fcf1e0;
+  color: #fd9222;
+}
+
+.backdrop-subscribe {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(164, 183, 205, 0.8);
+  transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 999;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal-subscribe {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 311px;
+  height: 350px;
+  border-radius: 15px;
+  overflow: hidden;
+  background-color: #fafafa;
+}
+
+.modal-subscribe__bground {
+  width: 100%;
+  height: 169px;
+  background-image: url(../img/subscribe.jpg);
+  background-size: cover;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .modal-subscribe__bground {
+    background-image: url(../img/subscribe@2x.jpg);
+  }
+}
+
+.modal-subscribe__form-block {
+  width: 100%;
+  height: 181px;
+  padding: 32px 24px;
+}
+
+.modal-subscribe_title {
+  margin: 0;
+  margin-bottom: 24px;
+  text-align: left;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #111111;
+}
+
+.modal-subscribe__icon-cl-menu {
+  stroke: #ffffff;
+}
+
+.modal-subscribe__bt-close {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  top: 14px;
+  right: 14px;
+  width: 24px;
+  height: 24px;
+  padding: 6px 6px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.modal-subscribe__bt-close:hover {
+  background-color: #fcf1e0;
+}
+.modal-subscribe__bt-close:hover .modal-subscribe__icon-cl-menu {
+  stroke: #fd9222;
+}
+
+.form-input {
+  position: relative;
+  width: 263px;
+  border-radius: 25px;
+  height: 45px;
+  border-style: solid;
+  border-color: rgba(17, 17, 17, 0.05);
+  border-width: 1.5px;
+  box-shadow: 0px 5.44px 5.44px 0px rgba(0, 0, 0, 0.03);
+  background-color: #ffffff;
+}
+.form-input input {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  padding: 14px 18px;
+  border: none;
+  color: #111111;
+  text-align: left;
+  border-radius: 25px;
+}
+
+.modal-subscribe__button {
+  display: block;
+  position: absolute;
+  bottom: 45px;
+  left: 263px;
+  transform: translateX(-100%);
+  width: 100px;
+  height: 45px;
+  background: #fd9222;
+  border-radius: 100px;
+  border: none;
+  padding: 12px 28px 12px 28px;
+  display: flex;
+  position: relative;
+  color: #ffffff;
+  font-weight: 600;
+}
+.modal-subscribe__button:hover {
+  background: #fcf1e0;
+  color: #fd9222;
 }/*# sourceMappingURL=main.css.map */
