--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
@@ -10,6 +11,7 @@
   color: getColor("primaryText");
   font-weight: 700;
 }
+
 .header__logo--normal {
   margin-right: 4px;
 }
@@ -20,3 +22,8 @@
   padding: 3px;
   cursor: pointer;
 }
+// .header:hover {
+//   .menu-mobile {
+//     transform: translateX(0%);
+//   }
+// }
