--- a/sass/components/_top-selers.scss
+++ b/sass/components/_top-selers.scss
@@ -1,4 +1,5 @@
 .top-selers {
+  position: relative;
   padding: 72px 20px 0px 20px;
   .button {
     display: flex;
@@ -11,12 +12,15 @@
     background-color: getColor("primary");
     border-radius: 100px;
     border: none;
-
+    cursor: pointer;
     color: getColor("secondaryText");
     font-weight: 600;
+    &:hover {
+      background: getColor("hover-btn");
+      color: getColor("primary");
+    }
   }
 }
-
 .top-selers__title {
   margin: 0;
   margin-bottom: 60px;
