--- a/css/main.css
+++ b/css/main.css
@@ -209,8 +209,8 @@ a {
   position: relative;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
   padding: 0 20px;
+  padding-top: 20px;
 }
 
 .header__logo {
@@ -244,7 +244,7 @@ a {
   flex-direction: column;
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 335px;
+  max-width: 100%;
   height: 620px;
   background: linear-gradient(180deg, rgba(17, 17, 17, 0) 0%, rgba(17, 17, 17, 0.4) 100%);
   background-image: url("../img/start-page/chocolate-covered-cocoa-powder-mob.jpg");
@@ -834,19 +834,17 @@ a {
   height: 100vh;
   padding: 136px 46px 0 50px;
   background-color: #111111;
-  transform: translateX(100%);
   z-index: 999;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: opacity 550ms linear, visibility 250ms linear, transform 350ms linear;
+  transition: opacity 550ms linear, visibility 250ms linear;
 }
 
 .menu-mobile.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
-  transform: translateX(0%);
 }
 
 .menu-mobile__close-btn {
@@ -920,12 +918,13 @@ a {
   top: 0px;
   left: 50%;
   width: 311px;
-  height: 994px;
+  height: 100vh;
   padding: 32px 20px;
   border-radius: 15px;
   background-color: #fafafa;
   transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateX(-50%);
+  overflow-y: auto;
 }
 
 .is-hidden {
