--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,8 +3,9 @@
   position: relative;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
+
   padding: 0 20px;
+  padding-top: 20px;
 }
 .header__logo {
   display: flex;
