--- a/sass/components/_modal-buynow.scss
+++ b/sass/components/_modal-buynow.scss
@@ -5,7 +5,7 @@
   top: 0px;
   left: 50%;
   width: 311px;
-  height: 994px;
+  height: 100vh;
   padding: 32px 20px;
   //   border: 1px solid red;
   border-radius: 15px;
@@ -15,6 +15,7 @@
   transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 1250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateX(-50%);
+  overflow-y: auto;
 }
 .is-hidden {
   opacity: 0;
