--- a/sass/components/_startpage.scss
+++ b/sass/components/_startpage.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 335px;
+  max-width: 100%;
   height: 620px;
   background: linear-gradient(
     180deg,
