--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -19,3 +19,14 @@ a {
   max-width: 375px;
   margin: 0 auto;
 }
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 769px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+}
