--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -44,6 +44,9 @@
   margin: 0;
   column-gap: 14px;
 }
+.footer__social-block-svg {
+  stroke: getColor("secondaryText");
+}
 .footer-menu {
   display: flex;
   width: 100%;
@@ -51,4 +54,72 @@
   row-gap: 18px;
   line-height: 1.14;
   font-weight: 500;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 32px;
+  }
+  .footer__title {
+    display: block;
+    font-size: 24px;
+    line-height: 1.16;
+    width: 300px;
+  }
+  .footer__contacts {
+    display: flex;
+    align-items: flex-start;
+    //   position: relative;
+    margin-left: 124px;
+    width: 280px;
+    padding: 0;
+    border: none;
+  }
+
+  .footer__contacts-title {
+    margin: 0 0 14px 0;
+    font-weight: 500;
+  }
+  .footer__contacts-list {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    row-gap: 4px;
+  }
+  .footer__social-block {
+    margin-left: 50px;
+  }
+  .footer__social-list {
+    column-gap: 18px;
+  }
+  .footer__social-block-svg {
+    width: 24px;
+    height: 24px;
+  }
+  .footer-menu {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 64px;
+
+    flex-direction: row;
+    gap: 24px;
+    margin-top: 78px;
+  }
+  .footer-menu__link {
+    padding: 24px 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__title {
+    font-size: 28px;
+    line-height: 1.21;
+  }
+  .footer__contacts {
+    margin: 0;
+    margin-left: auto;
+  }
 }
