--- a/sass/components/_howmade.scss
+++ b/sass/components/_howmade.scss
@@ -22,7 +22,8 @@
 }
 .how-made__block {
   margin: 0 auto;
-  max-width: 307px;
+  max-width: 100%;
+  padding: 32px;
 }
 .how-made__title-list {
   margin: 0;
@@ -44,4 +45,82 @@
 .how-made__discription {
   margin: 0;
   color: getColor("primaryText");
+}
+
+@media screen and (min-width: 768px) {
+  .how-made {
+    padding-left: 77px;
+    padding-right: 77px;
+  }
+  .how-made__title {
+    margin-bottom: 50px;
+    font-size: 20px;
+    line-height: 1.16;
+  }
+  .how-made__img {
+    display: none;
+  }
+  .how-made__video {
+    width: 100%;
+    height: 400px;
+    background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    );
+    background-image: url(/img/howmade/image_tablet.jpg);
+    background-size: cover;
+    border-radius: 15px;
+    @media (min-resolution: 2dppx) {
+      background-image: url(/img/howmade/image_tablet@2x.jpg);
+    }
+  }
+  .how-made__block {
+    max-width: 614px;
+    margin-top: 52px;
+  }
+  .how-made__title-list {
+    display: block;
+    margin: 0;
+    margin-right: 200px;
+    margin-bottom: 28px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .how-made {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+  .desktop-position {
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  .how-made__img {
+    display: none;
+  }
+  .how-made__video {
+    width: 100%;
+    height: 400px;
+    background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0.4),
+      rgba(0, 0, 0, 0.4)
+    );
+    background-image: url(/img/howmade/image_desktop.jpg);
+    background-size: cover;
+    @media (min-resolution: 2dppx) {
+      background-image: url(/img/howmade/image_desktop@2x.jpg);
+    }
+  }
+  .how-made__block {
+    max-width: 614px;
+    margin-top: 0px;
+  }
+  .how-made__title-list {
+    display: block;
+    margin: 0;
+    margin-right: 200px;
+    margin-bottom: 28px;
+  }
 }
