--- a/sass/components/_modal-subscribe.scss
+++ b/sass/components/_modal-subscribe.scss
@@ -24,7 +24,6 @@
   transform: translateX(-50%);
   width: 311px;
   height: 350px;
-
   border-radius: 15px;
   overflow: hidden;
   background-color: getColor("button");
@@ -96,9 +95,14 @@
     color: getColor("primaryText");
     text-align: left;
     border-radius: 25px;
+    &::placeholder {
+      color: rgba(64, 64, 64, 0.3);
+      text-align: left;
+      font-size: 18px;
+      letter-spacing: -0.02em;
+    }
   }
 }
-
 .modal-subscribe__button {
   display: block;
   position: absolute;
@@ -118,5 +122,51 @@
   &:hover {
     background: getColor("hover-btn");
     color: getColor("primary");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal-subscribe {
+    width: 538px;
+    height: 412px;
+  }
+  .modal-subscribe__bground {
+    width: 100%;
+    height: 196px;
+  }
+  .modal-subscribe__form-block {
+    width: 100%;
+    padding: 40px;
+  }
+  .modal-subscribe_title {
+    margin-bottom: 28px;
+    font-size: 24px;
+    line-height: 1.16;
+  }
+
+  .modal-subscribe__bt-close {
+    top: 24px;
+    right: 24px;
+    width: 28px;
+    height: 28px;
+    padding: 7px;
+  }
+  .form-input {
+    width: 458px;
+    height: 52px;
+    input {
+      width: 100%;
+      height: 52px;
+      padding: 14px 24px;
+    }
+  }
+
+  .modal-subscribe__button {
+    bottom: 52px;
+    left: 457px;
+    transform: translateX(-100%);
+    width: 137px;
+    height: 52px;
+    padding: 16px 42px;
   }
 }
