--- a/sass/components/_startpage.scss
+++ b/sass/components/_startpage.scss
@@ -82,3 +82,82 @@
     color: getColor("secondaryText");
   }
 }
+
+@media screen and (min-width: 768px) {
+  .start-page {
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 24px;
+    padding-bottom: 50px;
+  }
+  .start-page__block {
+    padding: 0px 40px 40px 40px;
+    max-width: 100%;
+    height: 890px;
+    background: linear-gradient(
+      180deg,
+      rgba(17, 17, 17, 0) 0%,
+      rgba(17, 17, 17, 0.4) 100%
+    );
+    background-image: url("../img/start-page/chocolate-covered-cocoa-powder-tab.jpg");
+    background-size: cover;
+    border-radius: 30px;
+    @media (min-resolution: 2dppx) {
+      .start-page__block {
+        background-image: url("../img/start-page/chocolate-covered-cocoa-powder-tab@2x.jpg");
+      }
+    }
+  }
+  .start-page__discription {
+    margin: 0;
+    margin-top: 671px;
+    margin-bottom: 0px;
+    text-align: left;
+    max-width: 100%;
+  }
+  .start-page__discription--font {
+    display: block;
+    width: 482px;
+    margin-bottom: 32px;
+    font-size: 28px;
+    line-height: 1.21;
+  }
+  .buynow {
+    margin: 0;
+    padding: 0;
+    padding: 14px 40px;
+    width: 144px;
+    height: 45px;
+  }
+  .howmade {
+    margin: 0;
+    padding: 0;
+    padding: 14px 40px;
+    margin-left: 14px;
+    width: 183px;
+    height: 45px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .start-page {
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 24px;
+    padding-bottom: 72px;
+  }
+  .start-page__block {
+    height: 600px;
+    background-image: url("../img/start-page//chocolate-covered-cocoa-powder-desktop.jpg");
+    background-size: cover;
+    border-radius: 30px;
+    @media (min-resolution: 2dppx) {
+      .start-page__block {
+        background-image: url("../img/start-page/chocolate-covered-cocoa-powder-desktop@2x.jpg");
+      }
+    }
+  }
+  .start-page__discription {
+    margin: 0;
+    margin-top: 351px;
+  }
+}
