--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -27,6 +27,7 @@
 }
 
 .subscribe__title {
+  display: block;
   margin: 0 auto;
   width: 291px;
   text-align: center;
@@ -42,4 +43,59 @@
   margin-top: 24px;
   text-align: center;
   color: getColor("secondaryText");
+}
+
+@media screen and (min-width: 768px) {
+  .subscribe {
+    padding: 72px 0px;
+    background-image: url(../img/subcribe/subcribe-tablet.jpg);
+    background-size: cover;
+    @media (min-resolution: 2dppx) {
+      background-image: url(../img/subcribe/subcribe-tablet@2x.jpg);
+    }
+    .button {
+      padding: 14px 40px 14px 40px;
+    }
+  }
+
+  .subscribe__title {
+    width: 378px;
+    font-size: 24px;
+    line-height: 1.16;
+  }
+  .subscribe__discription {
+    display: block;
+    width: 467px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    background-image: url(../img/subcribe/subcribe-desktop.jpg);
+    background-size: cover;
+    @media (min-resolution: 2dppx) {
+      background-image: url(../img/subcribe/subcribe-desktop@2x.jpg);
+    }
+    .button {
+      width: 172px;
+      height: 52px;
+      align-items: center;
+      justify-content: center;
+      padding: 14px 40px 14px 40px;
+      font-size: 18px;
+    }
+  }
+
+  .subscribe__title {
+    width: 378px;
+    font-size: 24px;
+    line-height: 1.16;
+  }
+  .subscribe__discription {
+    display: block;
+    width: 467px;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
