--- a/sass/components/_taste.scss
+++ b/sass/components/_taste.scss
@@ -18,6 +18,7 @@
   color: getColor("primary");
 }
 .taste__description {
+  display: block;
   margin: 0;
   text-align: center;
   color: getColor("primaryText");
@@ -95,5 +96,61 @@
 
   &--color {
     color: getColor("secondaryText");
+  }
+}
+@media screen and (min-width: 768px) {
+  .taste {
+    padding: 100px 32px 100px 32px;
+  }
+  .taste__title {
+    width: 411px;
+    margin: 0 auto;
+    margin-bottom: 28px;
+    font-size: 24px;
+    line-height: 1.16;
+  }
+  .taste__description {
+    width: 486px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+  }
+  .taste__list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 32px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .taste {
+    padding: 128px 32px 12cqi8 32px;
+  }
+  .taste__title {
+    margin-bottom: 50px;
+  }
+
+  .taste__list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap: 19px;
+  }
+  .taste__item-block {
+    position: relative;
+    padding: 28px 36px 28px 28px;
+    width: 270px;
+    height: 270px;
+  }
+  .tasteHover__block {
+    padding: 18px;
+    overflow: hidden;
+  }
+  .tasteHover__title {
+    margin: 0;
+    margin-bottom: 5px;
+    font-size: 16px;
   }
 }
